<resources>
    <string name="app_name">MyCasa Particular</string>
    <string name="welcome_user">Welcome</string>
    <string name="btn_input">LOGIN</string>
    <string name="acept_action_exit">Accept</string>
    <string name="cancel_action_exit">Cancel</string>
    <string name="hint_user">User</string>
    <string name="hint_pass">Password</string>
    <string name="hint_email">Email</string>
    <string name="no_internet_connection">Check your connection status and try again.</string>
    <string name="info_alert_user">Please, enter your username and password</string>
    <string name="lbl_room">Room</string>
    <string name="loading_mask_text">Loading...</string>
    <string name="login_user">Authenticating user data</string>
    <string name="sync_info_alert_message_to_local">Would you like to synchronize local data with MyCasaParticular?</string>
    <string name="sync_info_alert_message_to_server">Would you like to sync your MyCasaParticular data with the changes made to the account?</string>
    <string name="sync_info_alert_title">Sync</string>
    <string name="sync_data_title">Sync Data</string>
    <string name="error_save">Error report</string>
    <string name="hello">Hello</string>
    <string name="today_info">Today is</string>
    <string name="day_info">January 8, 2016</string>
    <string name="next_reserv">Next Reservation</string>
    <string name="btn_map">MAP</string>
    <string name="btn_reser">RESERVATIONS</string>
    <string name="locations">Locations</string>
    <string name="reservations">Reservations</string>
    <string name="emptyReservationsList">You have no reservations</string>
    <string name="no_file_map">There are no map files</string>
    <string name="adults">Adults:</string>
    <string name="children">Children:</string>
    <string name="destination">Travel destination:</string>
    <string name="province">Province:</string>
    <string name="no_data">(No Data)</string>
    <string name="leaving_message">Press again to exit.</string>
    <string name="option_no">No</string>
    <string name="option_yes">Yes!</string>
    <string name="no_rute">No route found</string>
    <string name="text_view_no_map_info">You can download map and routing data from Internet</string>
    <string name="button_download_cuba_map">Download</string>
    <string name="text_view_downloading_progress">Downloading: %d%%</string>
    <string name="distance">Distance</string>
    <string name="choose_origin">Choose origin</string>
    <string name="choose_destination">Choose destination</string>
    <string name="leave_roundabout">Leave the roundabout</string>
    <string name="sharp_left">Turn left suddenly on</string>
    <string name="left">Turn left on</string>
    <string name="slight_left">Turn left slowly on</string>
    <string name="continuee">Stay</string>
    <string name="continuee_on">Stay on</string>
    <string name="slight_right">Turn right slowly on</string>
    <string name="right">Turn right on</string>
    <string name="sharp_right">Turn left suddenly on</string>
    <string name="finish">End of the route</string>
    <string name="reached_via">Get to</string>
    <string name="take_exit">and take exit</string>
    <string name="in">on</string>
    <string name="roundabout">Use the roundabout</string>
    <string name="unknown_instruction">Unknown Instruction</string>
    <string name="no_detail">No Detail.</string>
    <string name="start">Start</string>
    <string name="finishp">Finish</string>
    <string name="icorrect_credential">Invalid username or password</string>
    <string name="outSide">This application is only available to use in Cuba</string>
    <string name="remember_pass">Recordar</string>
    <string name="btn_logout">Log Out</string>
    <string name="text_1_page_1">You can set your location by pressing…</string>
    <string name="text_1_page_2">If you choose a house, the date of checking in and checking out of the reservations that you have in this property, as well as the name of the accommodation facility will be shown.</string>
    <string name="text_1_page_3">In order to calculate the route between two points press the point of origin some seconds</string>
    <string name="text_2_page_3">Repeat the same operation to choose the destination point</string>
    <string name="text_1_page_4">Then indicate the means of transportation you prefer</string>
    <string name="text_2_page_4">The optimal route to get to your destination will be shown</string>
    <string name="text_1_page_5">Next, consult our indications to follow the route</string>
    <string name="text_1_page_6">In order to clean the route you set, you can use the button…</string>
    <string name="text_1_page_7">The functionalities of the map are only available for the area of Cuba.</string>
    <string name="permission_denied">Permission denied</string>
    <string name="offline">Offline</string>
    <string name="app_name_together">MyCasaParticular.com</string>
    <string name="check_in">Check In</string>
    <string name="check_out">Check Out</string>
    <string name="btn_search">SEARCH</string>
    <string name="select_date_info">Select a date.</string>
    <string name="no_guests">Guests</string>
    <string name="no_rooms">Rooms</string>
    <string name="search_accomodation_title">SEARCH ACCOMODATION</string>
    <string name="most_valued_houses">MOST VALUED HOUSES</string>
    <string name="int_home_destination" translatable="false">Santiago de Cuba</string>
    <string name="int_home_capacity" translatable="false">Capacity:2</string>
    <string name="int_medal" translatable="false">Economy</string>
    <string name="int_home_title" translatable="false">La Casa \'El Placer\'</string>
    <string name="int_client_name" translatable="false">Miguel Gómez León</string>
    <string name="prices_from">Prices From</string>
    <string name="int_eur_price" translatable="false">EUR 00.00</string>
    <string name="int_badge_num" translatable="false">0</string>
    <string name="int_destination_name" translatable="false">Centro Habana, La Habana</string>
    <string name="int_type_home" translatable="false">Casa Particular</string>
    <string name="label_services">Services</string>
    <string name="label_see_all">See All</string>
    <string name="label_book_now">Book!</string>
    <string name="label_breakfast">Breakfast</string>
    <string name="label_dinner">Dinner</string>
    <string name="label_parking">Parking</string>
    <string name="label_laundry">Laundry</string>
    <string name="label_stereo">Stereo</string>
    <string name="label_audiovisual">Audiovisual</string>
    <string name="label_smoke">Smoke</string>
    <string name="label_safe">Safe</string>
    <string name="label_cradle">Cradle</string>
    <string name="label_terrace">Terrace</string>
    <string name="label_yard">Yard</string>
    <string name="label_hvac">HVAC</string>
    <string name="int_hvac" translatable="false">Air Conditioning</string>
    <string name="label_bath">Bathroom</string>
    <string name="int_bath">Private, Interior</string>
    <string name="label_balcony">Balcony</string>
    <string name="label_windows">Windows</string>
    <string name="label_beds">Beds</string>
    <string name="title_search_results">SEARCH RESULTS</string>
    <string name="children_">Children</string>
    <string name="adults_">Adults</string>
    <string name="reservation_details">Reservation details</string>
    <string name="total_price">Total Price:</string>
    <string name="fixed_fee">Fixed Fee</string>
    <string name="client_service_fee">Client Service Fee</string>
    <string name="lodging_price">Lodging Price</string>
    <string name="accept_terms_and_conditions">I Accept Terms and Conditions</string>
    <string name="payment">Payment</string>
    <string name="search">Search</string>
    <string name="home_capacity">Capacity:</string>
    <string name="loading_accomodations">Loading Accommodations...</string>
    <string name="detail">Detail</string>
    <string name="description">Description</string>
    <string name="min_guests">Up to %d Guests</string>
    <string name="beedrooms">%d Beedrooms</string>
    <string name="room_number">Room #%d</string>
    <string name="from_c">"FROM: "</string>
    <string name="check_out_amp_pay"><![CDATA[Check out & Pay]]></string>
    <string name="payy">Pay</string>
    <string name="no_res_hab">No ha reservado ninguna habitación</string>
    <string name="label_register">Register</string>
    <string name="search_destination">Search destination</string>
    <string name="no_name">Name</string>
    <string name="last_name">Last Name</string>
    <string name="hint_pass_repeat">Repeat</string>
    <string name="search_country">Search country</string>
    <string name="acep_t_c">Accept the terms and conditions</string>
    <string name="pass_eq">Passwords must be equal</string>
    <string name="name_r">The name is required</string>
    <string name="city_r">The city is required</string>
    <string name="email_r">The email is required</string>
    <string name="c_user">Creating user...</string>
    <string name="c_profile">Saving Changes...</string>
    <string name="current_pass">Current Password</string>
    <string name="change_pass">Change Password</string>
    <string name="hint_new_pass">New pasword</string>
    <string name="title_search_results_favorites">Favorites</string>
    <string name="create_account_link">No account yet? Create one</string>
    <string name="phone">Phone number</string>
    <string name="city">City</string>
    <string name="take_foto">Take Photo</string>
    <string name="choose_pic">Choose from Library</string>
    <string name="cancel">Cancel</string>
    <string name="configs">Preferences</string>
    <string name="Confirm">Confirm</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>
    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="multi_select_list_preference_default_value" />
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="slogan">Lodging  where Cuba, Cuba is!</string>
</resources>