<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:fitsSystemWindows="false"
    tools:context=".view.activities.ActivityRegister">

    <RelativeLayout
        android:id="@+id/content_all"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="false"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        >

        <ScrollView
            android:id="@+id/scroll_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/book_now"
            android:fillViewport="true">

            <LinearLayout
                android:id="@+id/contss"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_back_search"
                android:orientation="vertical"
                android:padding="20dp">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/first_name"
                    style="@style/edit_text_home"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="2dp"
                    android:layout_marginRight="2dp"
                    android:drawableEnd="@drawable/container_vector_user"
                    android:drawableRight="@drawable/container_vector_user"
                    android:hint="@string/no_name"
                    android:maxLines="1"/>

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/last_name"
                    style="@style/edit_text_home"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="2dp"
                    android:layout_marginRight="2dp"
                    android:layout_marginTop="10dp"
                    android:drawableEnd="@drawable/container_vector_user"
                    android:drawableRight="@drawable/container_vector_user"
                    android:hint="@string/last_name"
                    android:maxLines="1"/>

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/email"
                    style="@style/edit_text_home"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="2dp"
                    android:layout_marginRight="2dp"
                    android:layout_marginTop="10dp"
                    android:drawableEnd="@drawable/container_vector_email"
                    android:drawableRight="@drawable/container_vector_email"
                    android:hint="@string/hint_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"/>

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/password"
                    style="@style/edit_text_home"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="2dp"
                    android:layout_marginRight="2dp"
                    android:layout_marginTop="10dp"
                    android:drawableEnd="@drawable/container_vector_pass"
                    android:drawableRight="@drawable/container_vector_pass"
                    android:hint="@string/hint_pass"
                    android:inputType="textPassword"
                    android:maxLines="1"/>

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/r_password"
                    style="@style/edit_text_home"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="2dp"
                    android:layout_marginRight="2dp"
                    android:layout_marginTop="10dp"
                    android:drawableEnd="@drawable/container_vector_pass"
                    android:drawableRight="@drawable/container_vector_pass"
                    android:hint="@string/hint_pass_repeat"
                    android:inputType="textPassword"
                    android:maxLines="1"/>

                <Spinner
                    android:id="@+id/spinner_countries"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="2dp"
                    android:layout_marginRight="2dp"
                    android:layout_marginTop="10dp"
                    android:background="@android:color/transparent"
                    android:drawSelectorOnTop="true"/>

                <CheckBox
                    android:id="@+id/term_condi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:text="@string/accept_terms_and_conditions"
                    android:textColor="@android:color/white"
                    android:theme="@style/CheckboxStyle"/>

            </LinearLayout>
        </ScrollView>

        <Button
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@drawable/selector_btn_green"
            android:ellipsize="end"
            android:lines="1"
            android:padding="4dp"
            android:text="@string/label_register"
            android:textColor="@android:color/white"
            android:textStyle="bold"/>
    </RelativeLayout>
</RelativeLayout>