<ViewSwitcher xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/view_flipper"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
              android:background="@color/color_btn_orange"
                tools:context=".MainActivityFragment">


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

        <ImageView
            android:id="@+id/instruction_ico"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:src="@mipmap/exclamation"/>
        <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_gravity="center"
                android:text="@string/no_file_map"
                style="@style/sub_title_card"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/text_view_no_map_info"
                android:gravity="center"
                android:id="@+id/textView"
                style="@style/sub_title_card"/>

        <ImageButton
            android:id="@+id/button_start_downloading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:src="@mipmap/download"/>

    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

        <TextView
                android:id="@+id/text_view_downloading_progress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_view_downloading_progress"
                android:gravity="center"
                style="@style/sub_title_card"/>

        <ProgressBar
                android:id="@+id/progress_bar_downloading"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="100"
                android:progress="0"
                android:indeterminate="false"/>
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/selector_btn_download"
                android:id="@+id/button_cancel_downloading"
                android:text="@string/cancel_action_exit"
                android:gravity="center"/>

    </LinearLayout>

</ViewSwitcher>
